# pyvoy

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  build.rs  codecov.yml  config.yaml  envoy-config.yaml  envoy.sh  hello.py  main.py  poe_tasks.toml  pyproject.toml  pyvoy.code-workspace  renovate.json  server.go  zensical.toml
.github/workflows/: bench.yaml  ci.yaml  codeql.yml  docs.yaml  release.yaml  renovate.yaml
bench/: _charts.py  _results.py  example_result.txt  run_benchmark.py  static_app.py
docs/: api.md  deployment.md  design.md  http-client.md  index.md  settings.md
example/: example.go  example.py  pyproject.toml  server.py
example/docker/: Dockerfile  pyproject.toml  server.py
pyvoy/: __init__.py  _cli.py  _glue.py  _server.py  _watcher.py
pyvoy/_bin/: __init__.py
pyvoy/asgi/: httpclient.pyi
scripts/: build.py  setup_it.py  wheel.py
src/: envoy.rs  eventbridge.rs  filter.rs  headernames.rs  lib.rs  ondrop.rs  types.rs
src/asgi/: filter.rs  mod.rs  python.rs  transport.rs  types.rs  websocket.rs
src/asgi/python/: awaitable.rs  eventloop.rs  lifespan.rs  mod.rs
src/asgi/shared/: app.rs  awaitable.rs  eventloop.rs  headers.rs  lifespan.rs  mod.rs  scope.rs
src/asgi/websocket/: executor.rs  mod.rs  stream.rs
src/wsgi/: filter.rs  mod.rs  pool.rs  python.rs  response.rs  transport.rs  types.rs
tests/: _util.py  conftest.py  test_asgi.py  test_asgi2.py  test_asgi_http2.py  test_asgi_lifespan.py  test_benchmarks.py  test_http2.py  test_ipv6.py  test_kitchensink.py  test_mounts.py  test_mtls.py  test_rootpath.py  test_startup_errors.py  test_static_mounts.py  test_tls.py  test_websockets.py  test_worker_threads.py
tests/apps/: kitchensink.py
tests/apps/asgi/: asgi2.py  kitchensink.py  lifespan.py
tests/apps/asgi/httpclient/: kitchensink.py  runner.py
tests/apps/asgi/httpclient/cases/: __init__.py  client.py  errors.py  tls.py  validation.py
tests/apps/httpclient/cases/: client.py  validation.py
tests/apps/static/: app.js  index.html
tests/apps/websockets/: echo.py  kitchensink.py
tests/apps/wsgi/: kitchensink.py
tests/apps/wsgi/httpclient/: runner.py
tests/go/: asgi_test.go  exec_posix.go  exec_windows.go  go.mod  go.sum  http2_test.go
tests/httpcilent/: conftest.py
tests/httpclient/: conftest.py  test_client.py  test_errors.py  test_tls.py  test_validation.py
upstream/: main.go
wstest/config/: fuzzingclient.json
