[package]
name = "pyvoy"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/curioswitch/pyvoy"

[dependencies]
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/anuraaga/envoy", rev = "c900e5fc89b30d7999cbb4079f1b1e191dec53b8" }

crossbeam-channel = "0.5.15"
encoding_rs = "0.8.35"
http = "1.4.0"
pyo3 = "0.27.2"
urlencoding = "2.1.3"
yaml-rust2 = "0.11.0"

[build-dependencies]
pyo3-build-config = { version = "0.28.0", features = ["resolve-config"] }

[lib]
name = "pyvoy"
path = "src/lib.rs"
crate-type = ["cdylib"]
