[package]
name = "pyvoy"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/curioswitch/pyvoy"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
name = "pyvoy"
path = "src/lib.rs"

[dependencies]
envoy-proxy-dynamic-modules-rust-sdk = {
  git = "https://github.com/anuraaga/envoy",
  rev = "c63a84f1d9b413dd85a6fb8dd00f77df5d701570"
}
url = "2.5.7"

bytes = "1.11.1"
crossbeam-channel = "0.5.15"
encoding_rs = "0.8.35"
http = "1.4.0"
itoa = "1.0.18"
pyo3 = { version = "0.29.0", features = ["bytes"] }
tungstenite = "0.29.0"
urlencoding = "2.1.3"
yaml-rust2 = "0.11.0"

[build-dependencies]
pyo3-build-config = { version = "0.29.0", features = ["resolve-config"] }

[patch.crates-io]
# Fork of tungstenite with permessage-deflate (RFC 7692) support, enabled by
# default. See https://github.com/curioswitch/tungstenite-rs.
tungstenite = {
  git = "https://github.com/curioswitch/tungstenite-rs",
  branch = "v0.29.0-deflate"
}
