[project]
name = "pyvoy"
version = "0.1.2"
description = "A Python app server based on envoy"
authors = [{ name = "CurioSwitch" }]
requires-python = ">= 3.10"
readme = "README.md"
license-files = ["LICENSE"]

dependencies = ["find-libpython", "pyyaml", "uvloop"]

[dependency-groups]
dev = [
    "asgiref",
    "granian",
    "httpx",
    "hypercorn",
    "poethepoet",
    "pyright[nodejs]",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "toml",
    "trustme",
    "uvicorn[standard]",
    "wheel",
]

[project.scripts]
pyvoy = "pyvoy._cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pyvoy"
module-root = ""

[tool.ruff.format]
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    # Same order as listed on https://docs.astral.sh/ruff/rules/
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "FBT",
    "B",
    "A",
    "COM818", # Other comma rules are handled by formatting
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q004",   # Other quote rules are handled by formatting
    "RSE",
    "RET",
    # This rule is a bit strict since accessing private members within this package can be
    # useful to reduce public API exposure. But it is important to not access private members
    # of dependencies like httpx so we enable it and ignore the locations where we need to.
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    # TODO: Update TODOs then enable
    # "TD",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "N",
    "PERF",
    "E",
    "W",
    # TODO: Flesh out docs and enable
    # "DOC"
    # "D",
    "F",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "UP",
    "FURB",
    "RUF",
    "TRY",
]

# Document reasons for ignoring specific linting errors
extend-ignore = [
    # Not applicable
    "AIR",
    # Dangerous false positives https://github.com/astral-sh/ruff/issues/4845
    "ERA",
    # Not Applicable
    "FAST",
    # Important to call user callbacks safely
    "BLE",
    # stdlib includes a module named code. This is less of an issue since users need to import a module so allow it
    "A005",
    # TODO: Consider using copyright headers
    "CPY",
    # Not Applicable
    "DJ",
    # It's fine to have TODOs
    "FIX",
    # Not Applicable
    "INT",
    # Even prevents pytest.raises around an iteration which is too strict
    "PT012",
    # Triggers for protocol implementations that don't need the arg too
    "ARG002",
    # Complexity checks usually reduce readability
    "C90",
    # Not Applicable
    "NPY",
    # Not Applicable
    "PD",
    # We use the Exception suffix instead
    "N818",
    # Handled by formatting
    "E111",
    "E114",
    "E117",
    "E501",
    "W191",
    # Low signal-to-noise ratio
    "PLR",
]

[tool.ruff.lint.per-file-ignores]
"scripts/**.py" = ["S603", "S607"]
"**/test_*.py" = [
    "ANN",
    "S101",
    "S603",
    "S607",
    "FBT",
    "EM",
    "INP",
    "SLF",
    "PERF",
    "D",
]


[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff]
# Don't run ruff on generated code from external plugins.
extend-exclude = ["*_pb2.py", "*_pb2.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"

[tool.bumpversion]
current_version = "0.1.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
tag = false
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
