[project]
name = "pyvoy"
version = "0.5.0"
description = "A Python app server based on envoy"
readme = "README.md"
requires-python = ">= 3.10"
license-files = ["LICENSE"]
authors = [{ name = "CurioSwitch" }]
keywords = ["asgi", "envoy", "wsgi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

dependencies = [
  "envoy-server==1.39.0",
  "find-libpython>=0.5.1",
  "pyqwest>=0.6.2",
  "pyyaml>=6.0",
  "uvloop>=0.22.1; sys_platform != 'win32'",
  "winloop>=0.4.1; sys_platform == 'win32'",
]

[project.urls]
Changelog = "https://github.com/curioswitch/pyvoy/releases"
Homepage = "https://github.com/curioswitch/pyvoy"
Issues = "https://github.com/curioswitch/pyvoy/issues"
Repository = "https://github.com/curioswitch/pyvoy.git"

[project.scripts]
pyvoy = "pyvoy._cli:main"

[dependency-groups]
dev = [
  "asgiref==3.12.1",
  # Used in setup_it.py, not directly, keeping it here allows renovate for free.
  "connectrpc==0.11.1",
  "granian==2.7.9",
  "gunicorn==26.0.0",
  "hypercorn==0.18.0",
  "kosoku==0.1.0",
  "poethepoet==0.48.0",
  "psutil==7.2.2",
  "pyright[nodejs]==1.1.411",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
  "seaborn==0.13.2",
  "starlette==1.3.1",
  "trustme==1.2.1",
  "uvicorn[standard]==0.51.0",
  "watchfiles==1.2.0",
  "websockets==16.1.1",
  "wheel==0.47.0",
]

docs = ["mkdocstrings-python==2.0.5", "zensical==0.0.51"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
  "slow: slow test that is skipped by default",
]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"

[tool.ruff.format]
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  # Same order as listed on https://docs.astral.sh/ruff/rules/
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "FBT",
  "B",
  "A",
  "COM818",  # Other comma rules are handled by formatting
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q004",  # Other quote rules are handled by formatting
  "RSE",
  "RET",
  # This rule is a bit strict since accessing private members within this package can be
  # useful to reduce public API exposure. But it is important to not access private members
  # of dependencies like pyqwest so we enable it and ignore the locations where we need to.
  "SLF",
  "SIM",
  "SLOT",
  "TID",
  # TODO: Update TODOs then enable
  # "TD",
  "TC",
  "ARG",
  "PTH",
  "FLY",
  "I",
  "N",
  "PERF",
  "E",
  "W",
  # TODO: Flesh out docs and enable
  # "DOC"
  # "D",
  "F",
  "PGH",
  "PLC",
  "PLE",
  "PLW",
  "UP",
  "FURB",
  "RUF",
  "TRY",
]

# Document reasons for ignoring specific linting errors
ignore = [
  # Not applicable
  "AIR",
  # Dangerous false positives https://github.com/astral-sh/ruff/issues/4845
  "ERA",
  # Not Applicable
  "FAST",
  # Important to call user callbacks safely
  "BLE",
  # stdlib includes a module named code. This is less of an issue since users need to import a module so allow it
  "A005",
  # TODO: Consider using copyright headers
  "CPY",
  # Not Applicable
  "DJ",
  # It's fine to have TODOs
  "FIX",
  # Not Applicable
  "INT",
  # Even prevents pytest.raises around an iteration which is too strict
  "PT012",
  # Triggers for protocol implementations that don't need the arg too
  "ARG002",
  # Complexity checks usually reduce readability
  "C90",
  # Not Applicable
  "NPY",
  # Not Applicable
  "PD",
  # We use the Exception suffix instead
  "N818",
  # Handled by formatting
  "E111",
  "E114",
  "E117",
  "E501",
  "W191",
  # Low signal-to-noise ratio
  "PLR",
  # Code is native only so we need docstrings in the stubs
  "PYI021",
]

typing-extensions = false

[tool.ruff.lint.per-file-ignores]
"scripts/**.py" = ["S603", "S607"]
"**/test_*.py" = [
  "ANN",
  "S101",
  "S603",
  "S607",
  "FBT",
  "EM",
  "INP",
  "SLF",
  "PERF",
  "D",
]
"tests/**/httpclient/cases/**" = [
  "ANN",
  "S101",
  "S603",
  "S607",
  "FBT",
  "EM",
  "INP",
  "SLF",
  "PERF",
  "D",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.uv.build-backend]
module-name = "pyvoy"
module-root = ""
